# simple-query-engine

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
dev/: lint.sh
src/: datasource.rs  error.rs  lib.rs  logical.rs  main.rs  optimiser.rs  physical.rs  planner.rs  planning.rs
src/datasource/: mod.rs  parquet.rs
src/datatypes/: scalar.rs
src/logical/: mod.rs
src/logical/expression/: add.rs  column.rs  concatenate.rs  literal.rs  mod.rs
src/logical/plan/: mod.rs  projection.rs  scan.rs
src/optimiser/logical/: mod.rs
src/physical/expression/: add.rs  column.rs  concatenate.rs  literal.rs  mod.rs
src/physical/plan/: mod.rs  projection.rs  scan.rs
src/util/: test.rs
