[package]
name = "simply-query-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = { version = "0.18", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3.3"
async-trait = "0.1.56"

[dev-dependencies]
regex = "1.5.6"
